src/test/ui/impl-trait/nested-rpit-hrtb.stderr
error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/nested-rpit-hrtb.rs:25:69
   |
LL | fn one_hrtb_outlives() -> impl for<'a> Foo<'a, Assoc = impl Sized + 'a> {}
   |                                                                     ^^
   |
note: lifetime declared here
  --> $DIR/nested-rpit-hrtb.rs:25:36
   |
LL | fn one_hrtb_outlives() -> impl for<'a> Foo<'a, Assoc = impl Sized + 'a> {}
   |                                    ^^

error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/nested-rpit-hrtb.rs:29:68
   |
LL | fn one_hrtb_trait_param() -> impl for<'a> Foo<'a, Assoc = impl Qux<'a>> {}
   |                                                                    ^^
   |
note: lifetime declared here
  --> $DIR/nested-rpit-hrtb.rs:29:39
   |
LL | fn one_hrtb_trait_param() -> impl for<'a> Foo<'a, Assoc = impl Qux<'a>> {}
   |                                       ^^

error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/nested-rpit-hrtb.rs:32:74
   |
LL | fn one_hrtb_outlives_uses() -> impl for<'a> Bar<'a, Assoc = impl Sized + 'a> {}
   |                                                                          ^^
   |
note: lifetime declared here
  --> $DIR/nested-rpit-hrtb.rs:32:41
   |
LL | fn one_hrtb_outlives_uses() -> impl for<'a> Bar<'a, Assoc = impl Sized + 'a> {}
   |                                         ^^

error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/nested-rpit-hrtb.rs:35:73
   |
LL | fn one_hrtb_trait_param_uses() -> impl for<'a> Bar<'a, Assoc = impl Qux<'a>> {}
   |                                                                         ^^
   |
note: lifetime declared here
  --> $DIR/nested-rpit-hrtb.rs:35:44
   |
LL | fn one_hrtb_trait_param_uses() -> impl for<'a> Bar<'a, Assoc = impl Qux<'a>> {}
   |                                            ^^

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/nested-rpit-hrtb.rs:54:77
   |
LL | fn two_htrb_outlives() -> impl for<'a> Foo<'a, Assoc = impl for<'b> Sized + 'b> {}
   |                     - help: consider introducing lifetime `'b` here: `<'b>` ^^ undeclared lifetime

error[E0496]: lifetime name `'b` shadows a lifetime name that is already in scope
  --> $DIR/nested-rpit-hrtb.rs:54:65
   |
LL | fn two_htrb_outlives() -> impl for<'a> Foo<'a, Assoc = impl for<'b> Sized + 'b> {}
   |                                                                 ^^          -- first declared here
   |                                                                 |
   |                                                                 lifetime `'b` already in scope

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/nested-rpit-hrtb.rs:62:82
   |
LL | fn two_htrb_outlives_uses() -> impl for<'a> Bar<'a, Assoc = impl for<'b> Sized + 'b> {}
   |                          - help: consider introducing lifetime `'b` here: `<'b>` ^^ undeclared lifetime

error[E0496]: lifetime name `'b` shadows a lifetime name that is already in scope
  --> $DIR/nested-rpit-hrtb.rs:62:70
   |
LL | fn two_htrb_outlives_uses() -> impl for<'a> Bar<'a, Assoc = impl for<'b> Sized + 'b> {}
   |                                                                      ^^          -- first declared here
   |                                                                      |
   |                                                                      lifetime `'b` already in scope

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0261, E0496.
For more information about an error, try `rustc --explain E0261`.
